Ajustes entrega final

--- a/RaellShoes/Views/Clientes/DetalhesProduto.cshtml
+++ b/RaellShoes/Views/Clientes/DetalhesProduto.cshtml
@@ -65,10 +65,10 @@
                                 <li><a href="/clientes/meuperfil">Meu Perfil</a></li>
                                 <li><a href="/clientes/meusenderecos">Meus Endereços</a></li>
                                 <li><a href="/clientes/meuscartoes">Meus Cartões</a></li>
-                                <li><a href="">Meus Pedidos</a></li>
-                                <li><a href="">Troca e Devoluções</a></li>
-                                <li><a href="">Ranking e Vales</a></li>
-                                <li><a href="">Alterar Senha</a></li>
+                                <li><a href="/clientes/meuspedidos">Meus Pedidos</a></li>
+                                <li><a href="/clientes/troca">Troca e Devoluções</a></li>
+                                <li><a href="/clientes/rankingcupons">Ranking e Cupons</a></li>
+                                <li><a href="/clientes/alterarsenha">Alterar Senha</a></li>
                                 <li><a href="/">Sair</a></li>
                             </ul>
                         </li>
@@ -106,37 +106,22 @@
                             <div class="portfolio-details-slider swiper">
                                 <div class="swiper-wrapper align-items-center">
 
-                                    <div class="swiper-slide">
-                                        <img src="~/assets/img/Produtos/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid" class="img-fluid">
-                                    </div>
+                                   
 
                                     <div class="swiper-slide">
-                                        <img src="~/assets/img/Produtos/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
+                                        <img src="~/assets/img/Produtos/URLFoto/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="~/assets/img/Produtos/URLFoto/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="~/assets/img/Produtos/URLFoto/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="~/assets/img/Produtos/URLFoto/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
                                     </div>
 
-                                    <div class="swiper-slide">
-                                        <img src="~/assets/img/Produtos/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
-                                    </div>
-
-                                    <div class="swiper-slide">
-                                        <img src="~/assets/img/Produtos/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
-                                    </div>
-
-                                    <div class="swiper-slide">
-                                        <img src="~/assets/img/Produtos/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
-                                    </div>
-
-                                    <div class="swiper-slide">
-                                        <img src="~/assets/img/Produtos/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
-                                    </div>
-
-                                    <div class="swiper-slide">
-                                        <img src="~/assets/img/Produtos/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
-                                    </div>
-
-                                    <div class="swiper-slide">
-                                        <img src="~/assets/img/Produtos/@Html.DisplayFor(model => Model.URLFoto)" alt="" style="height: 550px;width: 720px;" class="img-fluid">
-                                    </div>
+                                    
                                 </div>
                                 <div class="swiper-pagination"></div>
                             </div>
