--- a/RaellShoes/Views/Clientes/Index.cshtml
+++ b/RaellShoes/Views/Clientes/Index.cshtml
@@ -73,7 +73,7 @@
                                 <li><a href="/clientes/meuscartoes">Meus Cartões</a></li>
                                 <li><a href="/clientes/meuspedidos">Meus Pedidos</a></li>
                                 <li><a href="/clientes/troca">Troca e Devoluções</a></li>
-                                <li><a href="">Ranking e Vales</a></li>
+                                <li><a href="/clientes/rankingcupons">Ranking e Cupons</a></li>
                                 <li><a href="/clientes/alterarsenha">Alterar Senha</a></li>
                                 <li><a href="/">Sair</a></li>
                             </ul>
@@ -95,7 +95,7 @@
             <h2>O conforto e comodidade que você procura, encontra aqui!</h2>
             <div class="d-flex">
                 <a href="clientes/procurarproduto" class="btn-get-started scrollto">Ver Produtos</a>
-                <a href="https://www.youtube.com" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Conheça Nossa História</span></a>
+                <a href="" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Conheça Nossa História</span></a>
             </div>
         </div>
     </section><!-- End Hero -->
