--- a/RaellShoes/Views/Clientes/PedidoRealizado.cshtml
+++ b/RaellShoes/Views/Clientes/PedidoRealizado.cshtml
@@ -58,10 +58,10 @@
                                 <li><a href="/clientes/meuperfil">Meu Perfil</a></li>
                                 <li><a href="/clientes/meusenderecos">Meus Endereços</a></li>
                                 <li><a href="/clientes/meuscartoes">Meus Cartões</a></li>
-                                <li><a href="">Meus Pedidos</a></li>
-                                <li><a href="">Troca e Devoluções</a></li>
-                                <li><a href="">Ranking e Vales</a></li>
-                                <li><a href="">Alterar Senha</a></li>
+                                <li><a href="/clientes/meuspedidos">Meus Pedidos</a></li>
+                                <li><a href="/clientes/troca">Troca e Devoluções</a></li>
+                                <li><a href="/clientes/rankingcupons">Ranking e Cupons</a></li>
+                                <li><a href="/clientes/alterarsenha">Alterar Senha</a></li>
                                 <li><a href="/">Sair</a></li>
                             </ul>
                         </li>
