--- a/RaellShoes/Views/Clientes/Carrinho.cshtml
+++ b/RaellShoes/Views/Clientes/Carrinho.cshtml
@@ -1078,6 +1078,7 @@
         //Calcular o Frete do endereço
         function calcularFrete() {
             var valorFrete = Math.floor(Math.random() * 20) + 1;
+            var valorFrete = 10;
             document.getElementById('valor-frete').value = "R$ " + valorFrete+",00";
             adicionarValorFreteSubTotal();
         }
